--- a/css/custom.css
+++ b/css/custom.css
@@ -130,7 +130,7 @@ button {
 
 /********** copyright **********/
 #copyright {
-    background: #192440;
+    background: #19191a;
     padding: 2rem 3rem;
 }
 
